# PyCorr

./: .gitignore  README.md  pyproject.toml
src/PyCorr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pycorr/: __init__.py  entrypoints.py
